syntax = "proto3";

package usermgmt;

option go_package = "github.com/Omar-Belghaouti/usermgmt;usermgmt";

service UserManagement {
    rpc CreateNewUser(NewUser) returns (User) {}
    rpc GetUsers(Empty) returns (Users) {}
}

message Empty {}

message Users {
    repeated User users = 1;
}

message NewUser {
    string name = 1;
    int32 age = 2;
}

message User {
    string name = 1;
    int32 age = 2;
    int32 id = 3;
}